--- a/index.html
+++ b/index.html
@@ -1,44 +1,64 @@
 ---
 layout: default
-date: 2014-10-19 23:51
 ---
 
-{% if site.show_blog_header %}
-  {% include blog_header.html %}
-{% endif %}
 
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
-      {% for post in site.posts %}
-        <div class="blog-short">
-          <h3><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h3>
-  		<div>
-  		  <small>
-  			<i class="fa fa-calendar"></i>
-  			<time>
-          {{ post.date | date:'%A, %B %d, %Y'}}
-  			</time>
-  		  </small>
-           </div>
-  		    <div class="margin10">
-            <small>
-              <i class="fa fa-tag"></i>
-              {% for tag in post.tags %}
-                <span class="label label-tag">{{tag}}</span>
-              {% endfor %}
-            </small>
-          </div>
-          {% if post.thumbnail %}
-            <div class="imgcontainer col-xs-12 col-sm-4 col-md-3 col-lg-3">
-              <img src="{{post.thumbnail}}"
-              alt="{{post.title}}"  class="pull-left img-responsive thumb img-thumbnail" />
-            </div>
-          {% endif %}
-          <article class="excerpt">{{post.excerpt}}</article>
-          <a class="pull-right marginBottom10" href="{{post.url | prepend: site.baseurl }}">Read More</a>
+
+<!-- One -->
+    <section id="one">
+        <div class="container">
+            <header class="major">
+                <h2>Read Only</h2>
+                <p>Just an incredibly simple responsive site<br />
+                template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+            </header>
+            <p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
         </div>
-      {% endfor %}
-    </div>
-  </div>
-</div>
+    </section>
+
+<!-- Two -->
+    <section id="two">
+        <div class="container">
+            <h3>Things I Can Do</h3>
+            <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+            <ul class="feature-icons">
+                <li class="fa-code">Write all the code</li>
+                <li class="fa-cubes">Stack small boxes</li>
+                <li class="fa-book">Read books and stuff</li>
+                <li class="fa-coffee">Drink much coffee</li>
+                <li class="fa-bolt">Lightning bolt</li>
+                <li class="fa-users">Shadow clone technique</li>
+            </ul>
+        </div>
+    </section>
+
+<!-- Three -->
+    <section id="three">
+        <div class="container">
+            <h3>A Few Accomplishments</h3>
+            <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+            <div class="features">
+                <article>
+                    <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+                    <div class="inner">
+                        <h4>Possibly broke spacetime</h4>
+                        <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+                    </div>
+                </article>
+                <article>
+                    <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                    <div class="inner">
+                        <h4>Terraformed a small moon</h4>
+                        <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+                    </div>
+                </article>
+                <article>
+                    <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+                    <div class="inner">
+                        <h4>Snapped dark matter in the wild</h4>
+                        <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
