--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@ layout: default
       Vis aliquet tortor ultricies non ante erat nunc integer eu ante
       ornare amet commetus vestibulum blandit integer in curae ac
       faucibus integer non. Adipiscing cubilia elementum.
-  
+
   </p> </div>
 </section>
 
-<!-- Two 
+<!-- Two
 <section id="two">
   <div class="container">
     <h3>Things I Can Do</h3>
@@ -41,17 +41,17 @@ layout: default
 <section id="three">
   <div class="container">
     <h3>Research Interest and Projects</h3>
-    <!--    <p>In the past few years, I've been working as research software developer, working on 
+    <!--    <p>In the past few years, I've been working as research software developer, working on
       various research projects. Here are some projects that I am heavily involved with. -->
-      </p> <div class="features"> 
+      </p> <div class="features">
       <article>
         <a href="#" class="image"><img src="images/gel.png" alt="" /></a>
         <div class="inner">
           <h4>Building a platform for genetic inference from the Genomics England data</h4>
-          <p> Genomics England is working on 100,000 human genome sequencings with high coverage data. 
-            We are responsible for edeveloping many of the leading current approaches for phasing, imputation, 
-            and inferring population struture and demography. I work on a mixture of algorithm 
-            development and implementation. 
+          <p> Genomics England is working on 100,000 human genome sequencings with high coverage data.
+            We are responsible for edeveloping many of the leading current approaches for phasing, imputation,
+            and inferring population struture and demography. I work on a mixture of algorithm
+            development and implementation.
           </p>
         </div>
       </article>
@@ -80,8 +80,8 @@ layout: default
           <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
         </div>
       </article>
-    
-    
+
+
     </div>
   </div>
 </section>
@@ -92,18 +92,18 @@ layout: default
   <div class="container">
 
     <h3> Publication </h3>
-    [1] S. Shi, D. Pérez-Suárez, S. Harris, N. MacCallum, D. Brealey, M. Singer, J. Hetherington (2017), cleanEHR: The critical care EHR analysis tools, 
-    Journal of Open Source Software. (submitted) <br \> <br \>
+    [1] S. Shi, D. Pérez-Suárez, S. Harris, N. MacCallum, D. Brealey, M. Singer, J. Hetherington (2017), cleanEHR: The critical care EHR analysis tools,
+    Journal of Open Source Software. <br \> <br \>
 
     [2] S. Harris, S. Shi and et al., (2017) Data, tools and methods for
     reproducible research: a multi-centre UK intensive care database,
-    International Journal of Medical Informatics (submitted).  <br \><br \>
+    International Journal of Medical Informatics. <br \><br \>
 
     [3] M. Fader, S. Shi, W. von Bloh, A. Bondeau, and W. Cramer, (2016),
     Mediterranean irrigation under climate change: more efficient irrigation
     needed to compensate increases in irrigation water requirements, Hydrology
     and Earth System Science, 20, 953-973. <br \><br \>
-   
+
     [4] M. Fader, W. von Bloh, S.
     Shi, A. Bondeau, and W. Cramer, (2015), Mediterranean agro-ecosystems by
     including agricultural trees in the LPJmL model, Geoscientific Model
@@ -115,5 +115,3 @@ layout: default
     Special Issue EMG 2012, Springer. <br \> <br \>
 </div>
 </section>
-
-
