--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 layout: default
 ---
 
-
-
-<!-- One -->
+<!-- One
 <section id="one">
   <div class="container">
     <header class="major">
       <!--                 <h2>Sinan Shi</h2>
-      <p>Postdoctoral Research Assistant, University of Oxford<br /></p>-->
+      <p>Postdoctoral Research Assistant, University of Oxford<br /></p>
     </header>
     <p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus
       col. Commodo id in arcu ante lorem ipsum sed accumsan erat
@@ -19,7 +17,7 @@ layout: default
       faucibus integer non. Adipiscing cubilia elementum.
 
   </p> </div>
-</section>
+</section>-->
 
 <!-- Two
 <section id="two">
@@ -92,24 +90,31 @@ layout: default
   <div class="container">
 
     <h3> Publication </h3>
-    [1] S. Shi, D. Pérez-Suárez, S. Harris, N. MacCallum, D. Brealey, M. Singer, J. Hetherington (2017), cleanEHR: The critical care EHR analysis tools,
+
+    [1] Speidel, L., Forest, M., Shi, S. et al. A method for genome-wide genealogy estimation for thousands of samples.
+        Nat Genet 51, 1321–1329 (2019). https://doi.org/10.1038/s41588-019-0484-x <br \> <br \>
+
+    [2] Elliott, L.T., Sharp, K., Alfaro-Almagro, F., Shi, S., et al. Genome-wide association studies of brain imaging phenotypes in UK Biobank. Nature 562, 210–216 (2018).
+    https://doi.org/10.1038/s41586-018-0571-7<br \> <br \>
+
+    [3] S. Shi, D. Pérez-Suárez, S. Harris, N. MacCallum, D. Brealey, M. Singer, J. Hetherington (2017), cleanEHR: The critical care EHR analysis tools,
     Journal of Open Source Software. <br \> <br \>
 
-    [2] S. Harris, S. Shi and et al., (2017) Data, tools and methods for
+    [4] S. Harris, S. Shi and et al., (2017) Data, tools and methods for
     reproducible research: a multi-centre UK intensive care database,
     International Journal of Medical Informatics. <br \><br \>
 
-    [3] M. Fader, S. Shi, W. von Bloh, A. Bondeau, and W. Cramer, (2016),
+    [5] M. Fader, S. Shi, W. von Bloh, A. Bondeau, and W. Cramer, (2016),
     Mediterranean irrigation under climate change: more efficient irrigation
     needed to compensate increases in irrigation water requirements, Hydrology
     and Earth System Science, 20, 953-973. <br \><br \>
 
-    [4] M. Fader, W. von Bloh, S.
+    [6] M. Fader, W. von Bloh, S.
     Shi, A. Bondeau, and W. Cramer, (2015), Mediterranean agro-ecosystems by
     including agricultural trees in the LPJmL model, Geoscientific Model
     Development, 8, 3545-3561, 2015. <br \><br \>
 
-    [5] E. Mueller, X. Guo, R. Scheichl, S. Shi,(2013) Matrix-free GPU
+    [7] E. Mueller, X. Guo, R. Scheichl, S. Shi,(2013) Matrix-free GPU
     implementation of a preconditioned conjugate gradient solver for
     anisotropic elliptic PDEs, Computation and Visualization in Science:
     Special Issue EMG 2012, Springer. <br \> <br \>
